--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -127,7 +127,7 @@
 
         <a (click)="navigateToProjectSection('projectPhases')" [class.active-link]="isProjectSectionActive('projectPhases')"
       class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
-      Project Phases
+      Project Tasks
     </a>
 
       </div>
@@ -169,7 +169,7 @@
         <a (click)="navigateToManagersHubSection('projectPhases')" 
            [class.active-link]="isManagersHubSectionActive('projectPhases')"
            class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
-          Project Phases
+          Project Tasks
         </a>
         
          <!-- Team Management Sections -->
