--- a/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
+++ b/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
@@ -472,9 +472,9 @@
                         <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
                             clip-rule="evenodd" />
                     </svg>
-                    Add New Project Phase
+                    Add New Project Task
                 </h3>
-                <p class="text-xs text-gray-500 mt-1">Fill all required fields (*) to create new project phase</p>
+                <p class="text-xs text-gray-500 mt-1">Fill all required fields (*) to create new project Task</p>
             </div>
 
             <form #projectPhaseFormRef="ngForm"
@@ -518,9 +518,9 @@
 
                     <!-- Phase Name -->
                     <div class="space-y-1">
-                        <label class="text-xs font-medium text-gray-600">Phase Name*</label>
+                        <label class="text-xs font-medium text-gray-600">Task Name*</label>
                         <input type="text" [(ngModel)]="projectPhaseForm.project_phase_name" #phaseField="ngModel"
-                            name="project_phase_name" required placeholder="Enter phase name"
+                            name="project_phase_name" required placeholder="Enter Task name"
                             class="text-xs w-full px-2 py-1 border border-gray-300 rounded focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
                             [ngClass]="{'border-red-500': (phaseField.invalid && phaseField.touched) || (projectPhaseFormRef.submitted && phaseField.invalid)}" />
                         <span class="text-xs text-red-500"
@@ -539,7 +539,7 @@
                                 d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                 clip-rule="evenodd" />
                         </svg>
-                        Save Phase
+                        Save Task
                     </button>
                 </div>
             </form>
@@ -591,7 +591,7 @@
 
 
                     <div class="relative w-full">
-                        <label class="block text-xs font-medium mb-1">Phase</label>
+                        <label class="block text-xs font-medium mb-1">Task</label>
                         <input type="text" [(ngModel)]="phaseNameFilter" (input)="applyPhaseFilters()"
                             placeholder="Search Phase"
                             class="text-xs border border-gray-300 rounded px-2 py-1 w-full h-6" />
@@ -633,7 +633,7 @@
                             <th class="px-1 py-1 border border-gray-200 text-center">Customer</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Project</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Deliverable</th>
-                            <th class="px-1 py-1 border border-gray-200 text-center">Phase</th>
+                            <th class="px-1 py-1 border border-gray-200 text-center">Task</th>
                             <th class="sticky right-0 px-1 py-1 border border-gray-200 text-center bg-gray-50">Actions
                             </th>
                         </tr>
@@ -762,7 +762,7 @@
             class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-[1000]"
             (click)="closeEditPhaseModal()">
             <div class="bg-white p-6 rounded-lg w-1/2 max-w-3xl" (click)="$event.stopPropagation()">
-                <h3 class="text-lg font-semibold mb-4 text-gray-800">Edit Project Phase</h3>
+                <h3 class="text-lg font-semibold mb-4 text-gray-800">Edit Project Task</h3>
                 <form #editPhaseForm="ngForm" (ngSubmit)="updateProjectPhase(editPhaseForm); $event.preventDefault()">
                     <div class="grid grid-cols-3 gap-4">
                         <!-- Project Selection -->
@@ -803,7 +803,7 @@
 
                         <!-- Phase Name Field -->
                         <div class="space-y-1">
-                            <label class="text-xs font-medium text-gray-600">Phase Name*</label>
+                            <label class="text-xs font-medium text-gray-600">Task Name*</label>
                             <input type="text"
                                 class="text-xs w-full px-2 py-1 border border-gray-300 rounded focus:ring-1 focus:ring-blue-500 focus:border-blue-500"
                                 [(ngModel)]="editPhaseData.project_phase_name" #editPhaseNameField="ngModel"
@@ -830,7 +830,7 @@
                                     d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
                                     clip-rule="evenodd" />
                             </svg>
-                            Update Phase
+                            Update Task
                         </button>
                     </div>
                 </form>
@@ -1118,10 +1118,10 @@
                         </ng-select>
                     </div>
                     <div class="relative w-full">
-                        <label class="block text-xs font-medium mb-1">Phase</label>
+                        <label class="block text-xs font-medium mb-1">Task</label>
                         <ng-select [(ngModel)]="timesheetPhaseFilter" (change)="applyTimesheetFilters()"
                             class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
-                            <ng-option [value]="">All Phases</ng-option>
+                            <ng-option [value]="">All Tasks</ng-option>
                             <ng-option *ngFor="let phase of optionPhasesForTimesheet" [value]="phase.id">
                                 {{ phase.name }}
                             </ng-option>
@@ -1190,7 +1190,7 @@
                                 #</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Employee Name</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Project Name</th>
-                            <th class="px-1 py-1 border border-gray-200 text-center">Phase</th>
+                            <th class="px-1 py-1 border border-gray-200 text-center">Task</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Deliverable</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Task Description</th>
                             <th class="px-1 py-1 border border-gray-200 text-center">Hours</th>
@@ -1624,7 +1624,7 @@
                                     #</th>
                                 <th class="px-1 py-1 border border-gray-200 text-center">Employee Name</th>
                                 <th class="px-1 py-1 border border-gray-200 text-center">Project Name</th>
-                                <th class="px-1 py-1 border border-gray-200 text-center">Phase</th>
+                                <th class="px-1 py-1 border border-gray-200 text-center">Task</th>
                                 <th class="px-1 py-1 border border-gray-200 text-center">Deliverable</th>
                                 <th class="px-1 py-1 border border-gray-200 text-center">Task Description</th>
                                 <th class="px-1 py-1 border border-gray-200 text-center">Hours</th>
